# resume

./: .gitignore  build.sh  dihwuxvj  env.env  manage.py  pyproject.toml
resume/: models.py  urls.py  views.py
resume/locale/en/LC_MESSAGES/: django.mo  django.po
resume/locale/ru/LC_MESSAGES/: django.mo  django.po
resume/static/resume/css/: style.css
resume/templates/resume/: base.html  contacts.html  education.html  experience.html  index.html  projects.html  stars.html
resume/templatetags/: tags.py
resume_pda/: asgi.py  settings.py  urls.py  wsgi.py
