[tool.poetry]
name = "resume-pda"
version = "0.1.0"
description = ""
authors = ["fckscl <dimapugach31102003@gmail.com>"]
readme = "README.md"
packages = [{include = "resume_pda"}]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.2"
dj-database-url = "^1.3.0"
psycopg2-binary = "^2.9.6"
gunicorn = "^20.1.0"
django-bootstrap-v5 = "^1.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
